> COMMIT

# Created

# Refactored
- RegisterForm.tsx

# Imported

## TODO
- Form Stepper 3

## NOTES
- Email Availability Checker @ Form Stepper 1
- Email Verification
  - Form Stepper 3
  - Logged-in Page